test/expected/include-unquoted.out
cdecl> include "|"
               ^
3,9: error: |: contains unquoted shell characters
